exports[`<TrackerItem /> render should be able to render without time ranges 1`] = `
<div
  className="callout clearfix">
  <div
    className="float-right">
    0
     h 
    0
     m
  </div>
  <p>
    <b>
      Saturday, December 3rd 2016
    </b>
  </p>
  <div
    className="time-ranges">
    Time ranges:
    <div
      className="callout warning">
      No data yet. Maybe add some?
    </div>
  </div>
  <div
    className="button-group">
    <form
      id="handle-new-range-form"
      onSubmit={[Function]}>
      <input
        placeholder="--:--"
        type="time" />
      <input
        placeholder="--:--"
        type="time" />
      <button
        className="button primary">
        Add range
      </button>
    </form>
    <button
      className="button alert hollow"
      id="lock-button"
      onClick={[Function]}>
      Lock
    </button>
  </div>
</div>
`;

exports[`<TrackerItem /> render should render with controls if not locked 1`] = `
<div
  className="callout clearfix">
  <div
    className="float-right">
    8
     h 
    0
     m
  </div>
  <p>
    <b>
      Saturday, December 3rd 2016
    </b>
  </p>
  <div
    className="time-ranges">
    Time ranges:
    <div>
      from 
      10:00 AM
       to 
      1:00 PM
    </div>
    <div>
      from 
      2:00 PM
       to 
      7:00 PM
    </div>
  </div>
  <div
    className="button-group">
    <form
      id="handle-new-range-form"
      onSubmit={[Function]}>
      <input
        placeholder="--:--"
        type="time" />
      <input
        placeholder="--:--"
        type="time" />
      <button
        className="button primary">
        Add range
      </button>
    </form>
    <button
      className="button alert hollow"
      id="lock-button"
      onClick={[Function]}>
      Lock
    </button>
  </div>
</div>
`;

exports[`<TrackerItem /> render should render without controls if locked 1`] = `
<div
  className="callout clearfix">
  <div
    className="float-right">
    8
     h 
    4
     m
  </div>
  <p>
    <b>
      Friday, December 2nd 2016
    </b>
  </p>
  <div
    className="time-ranges">
    Time ranges:
    <div>
      from 
      8:57 AM
       to 
      1:01 PM
    </div>
    <div>
      from 
      2:00 PM
       to 
      6:00 PM
    </div>
  </div>
  <div />
</div>
`;

exports[`<TrackerItem /> renders correctly 1`] = `
<div
  className="callout clearfix">
  <div
    className="float-right">
    8
     h 
    4
     m
  </div>
  <p>
    <b>
      Friday, December 2nd 2016
    </b>
  </p>
  <div
    className="time-ranges">
    Time ranges:
    <div>
      from 
      8:57 AM
       to 
      1:01 PM
    </div>
    <div>
      from 
      2:00 PM
       to 
      6:00 PM
    </div>
  </div>
  <div />
</div>
`;
